--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,15 +13,24 @@
 
 <body>
     {{> _header}}
+    {{> _add_btn}}
     <div class="container">
         {{{body}}}
     </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.20.1/ckeditor.js"
+        integrity="sha512-zFNDGGU5T3I464vTJn5SupfBJEoxFa7oa5BRkQjm409ORBe1U4f7cpbylDdV21yrmjmYKo3Y0sPTxR9kBgSkvQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
+        M.FormSelect.init(document.querySelector('#status'))
+
+        CKEDITOR.replace('body', {
+            plugins: 'wysiwygarea, toolbar, basicstyles, link'
+        })
     </script>
 </body>
 
